--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Paolo Gera | Web Developer</title>
+    <title>Paolo Gera | Full-Stack Developer</title>
     <link rel="stylesheet" href="css/styles.css" />
 
     <script defer src="scripts/script.js"></script>
