Fixed a typo in the comments of JS menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="navigation__menu-js"></div>
         </div>
         <div class="js-menu">
-          <!-- This meny will be created using JavaScript -->
+          <!-- This menu will be created using JavaScript -->
         </div>
 
         <input
